fixed patch cables clipping out

--- a/src/css/PatchCable.css
+++ b/src/css/PatchCable.css
@@ -1,6 +1,6 @@
 .PatchCable {
-    width: 100%;
-    height: 100%;
+    width: 1000vw;
+    height: 1000vh;
     position: absolute;
     top: 0;
     left: 0;
